--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 	<main>
 		<section class="container">
 			<h2>Meus pacientes</h2>
+
+			<label for="filto-tabela">Buscar: </label>
+			<input type="search" name="filtro" id="filtro-tabela" placeholder="Digite o nome do paciente">
+
 			<table>
 				<thead>
 					<tr>
@@ -71,6 +75,7 @@
 					</tr>
 				</tbody>
 			</table>
+			<button id="buscar-pacientes" class="botao bto-principal" onclick="buscarPacientes()">Buscar</button>
 		</section>
 	</main>
 	<section class="container">
@@ -102,6 +107,8 @@
 	</section>
 	<script src="js/principal.js"></script>
 	<script src="js/form.js"></script>
+	<script src="js/conteudo.js"></script>
+	<script src="js/busca-pacientes.js"></script>
 </body>
 
 </html>
